# xmu-rollcall-wechat-bot

./: .gitignore  README.md
deploy/: xmu-wechatbot.env.example  xmu-wechatbot.service
docs/: ubuntu-wechatbot-deploy.md
scripts/: bootstrap.sh  install-systemd.sh  start-local.sh
skills/manage-xmu-rollcall/: SKILL.md
skills/manage-xmu-rollcall/agents/: openai.yaml
skills/manage-xmu-rollcall/references/: runtime.md
skills/manage-xmu-rollcall/scripts/: xmu_rollcall  xmu_rollcall_tool.py
xmu-rollcall-android/: .gitignore  settings.gradle.kts
xmu-rollcall-android/app/: build.gradle.kts
xmu-rollcall-android/app/src/main/: AndroidManifest.xml
xmu-rollcall-android/app/src/main/java/com/xmu/rollcall/service/: WatchService.kt
xmu-rollcall-android/app/src/main/java/com/xmu/rollcall/ui/: DashboardScreen.kt
xmu-rollcall-cli/: README.md  pyproject.toml  requirements.txt  setup.py
xmu-rollcall-cli/xmu_rollcall/: __init__.py  config.py  rollcall_service.py  utils.py  wechat_bot.py  wechat_storage.py
